2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-10  David Daney  <ddaney@avtrex.com>

        * java/util/BitSet.java (get(int, int)): Fix breakage when
        requested set doesn't start on a multiple of 64.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-10  Jeroen Frijters  <jeroen@frijters.net>

        * java/lang/ClassLoader.java
        (defaultGetSystemClassLoader): Refactored in three new methods.
        (createExtClassLoader, createSystemClassLoader,
        createAuxiliarySystemClassLoader): New methods.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-06  Robert Schuster  <thebohemian@gmx.net>

        * java/awt/Frame.java:
        (setUndecorated): Toggled boolean expression.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-06  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/PlainView.java
        (getPreferredSpan): Corrected the calculation of the span of
        the view.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-04  Mark Wielaard  <mark@klomp.org>

        * java/awt/BufferCapabilities.java (BufferCapabilities): Make
        documentation of arguments match code.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * java/awt/image/BufferStrategy.java: Document.

        * java/awt/BufferCapabilities.java: Document.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-04  Tom Tromey  <tromey@redhat.com>

        * java/nio/channels/FileLock.java (toString): Entirely avoid
        String "+".

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-04  Andrew Overholt  <overholt@redhat.com>

        * java/nio/channels/FileLock.java (toString): Re-implement using