@@ -47,6 +47,8 @@ import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 
 import javax.accessibility.AccessibleStateSet;
+import javax.swing.text.AttributeSet;
+import javax.swing.text.BadLocationException;
 import javax.swing.text.Document;
 import javax.swing.text.JTextComponent;
 import javax.swing.text.PlainDocument;
@@ -187,7 +189,15 @@ public class JTextField extends JTextComponent
    */
   protected Document createDefaultModel()
   {
-    return new PlainDocument();
+    // subclassed to swallow newlines
+    return new PlainDocument() {
+        public void insertString(int offset, String str, AttributeSet a)
+          throws BadLocationException
+        {
+          if (str.indexOf('\n') == -1)
+            super.insertString(offset, str, a);
+        }
+      };
   }
 
   /**
